--- a/index.html
+++ b/index.html
@@ -27,8 +27,8 @@
                 <h2 class="desc">Web Developer</h2>
                 <ul class="social list-inline">
                     <li><a href="#"><i class="fa fa-twitter"></i></a></li>                   
-                    <li><a href="#"><i class="fa fa-linkedin"></i></a></li>
-                    <li><a href="#"><i class="fa fa-github"></i></a></li>                
+                    <li><a href="https://www.linkedin.com/in/arya-s-88b951221/"><i class="fa fa-linkedin"></i></a></li>
+                    <li><a href="https://github.com/arya-shikha"><i class="fa fa-github"></i></a></li>                
                 </ul> 
             </div><!--//profile-->
             <a class="btn btn-cta-primary pull-right" href="mailto:aryashikha195@gmail.com?subject = Feedback&body = Message" target="_blank"><i class="fa fa-paper-plane"></i> Contact Me</a>              
